--- a/packages/react/src/Image/Image.module.css
+++ b/packages/react/src/Image/Image.module.css
@@ -8,21 +8,21 @@
 }
 
 .Image--aspect-ratio-custom {
-  aspect-ratio: var(--brand-Image-ratio-custom);
+  aspect-ratio: var(--brand-image-aspectRatio);
 }
 
 .Image--aspect-ratio-1-1 {
-  aspect-ratio: 1 / 1;
+  --brand-image-aspectRatio: 1 / 1;
 }
 
 .Image--aspect-ratio-16-9 {
-  aspect-ratio: 16 / 9;
+  --brand-image-aspectRatio: 16 / 9;
 }
 
 .Image--aspect-ratio-16-10 {
-  aspect-ratio: 16 / 10;
+  --brand-image-aspectRatio: 16 / 10;
 }
 
 .Image--aspect-ratio-4-3 {
-  aspect-ratio: 4 / 3;
+  --brand-image-aspectRatio: 4 / 3;
 }
