--- a/packages/react/src/Card/Card.module.css
+++ b/packages/react/src/Card/Card.module.css
@@ -141,59 +141,59 @@
 }
 
 .Card__icon--color-default {
-  color: var(--brand-Card-icon-color-default);
+  color: var(--brand-fgColor-gray);
 }
 
 .Card__icon--color-default.Card__icon--badge {
-  background-color: var(--brand-Card-icon-background-default);
+  background-color: var(--brand-bgColor-gray);
 }
 
 .Card__icon--color-blue {
-  color: var(--brand-Card-icon-color-blue);
+  color: var(--brand-fgColor-blue);
 }
 
 .Card__icon--color-blue.Card__icon--badge {
-  background-color: var(--brand-Card-icon-background-blue);
+  background-color: var(--brand-bgColor-blue);
 }
 
 .Card__icon--color-coral {
-  color: var(--brand-Card-icon-color-coral);
+  color: var(--brand-fgColor-coral);
 }
 
 .Card__icon--color-coral.Card__icon--badge {
-  background-color: var(--brand-Card-icon-background-coral);
+  background-color: var(--brand-bgColor-coral);
 }
 
 .Card__icon--color-green {
-  color: var(--brand-Card-icon-color-green);
+  color: var(--brand-fgColor-green);
 }
 
 .Card__icon--color-green.Card__icon--badge {
-  background-color: var(--brand-Card-icon-background-green);
+  background-color: var(--brand-bgColor-green);
 }
 
 .Card__icon--color-gray {
-  color: var(--brand-Card-icon-color-gray);
+  color: var(--brand-fgColor-gray);
 }
 
 .Card__icon--color-gray.Card__icon--badge {
-  background-color: var(--brand-Card-icon-background-gray);
+  background-color: var(--brand-bgColor-gray);
 }
 
 .Card__icon--color-indigo {
-  color: var(--brand-Card-icon-color-indigo);
+  color: var(--brand-fgColor-indigo);
 }
 
 .Card__icon--color-indigo.Card__icon--badge {
-  background-color: var(--brand-Card-icon-background-indigo);
+  background-color: var(--brand-bgColor-indigo);
 }
 
 .Card__icon--color-lemon {
-  color: var(--brand-Card-icon-color-lemon);
+  color: var(--brand-fgColor-lemon);
 }
 
 .Card__icon--color-lemon.Card__icon--badge {
-  background-color: var(--brand-Card-icon-background-lemon);
+  background-color: var(--brand-bgColor-lemon);
 }
 
 .Card__icon--color-lime {
@@ -201,55 +201,55 @@
 }
 
 .Card__icon--color-lime.Card__icon--badge {
-  background-color: var(--brand-Card-icon-background-lime);
+  background-color: var(--brand-bgColor-lime);
 }
 
 .Card__icon--color-orange {
-  color: var(--brand-Card-icon-color-orange);
+  color: var(--brand-fgColor-orange);
 }
 
 .Card__icon--color-orange.Card__icon--badge {
-  background-color: var(--brand-Card-icon-background-orange);
+  background-color: var(--brand-bgColor-orange);
 }
 
 .Card__icon--color-pink {
-  color: var(--brand-Card-icon-color-pink);
+  color: var(--brand-fgColor-pink);
 }
 
 .Card__icon--color-pink.Card__icon--badge {
-  background-color: var(--brand-Card-icon-background-pink);
+  background-color: var(--brand-bgColor-pink);
 }
 
 .Card__icon--color-purple {
-  color: var(--brand-Card-icon-color-purple);
+  color: var(--brand-fgColor-purple);
 }
 
 .Card__icon--color-purple.Card__icon--badge {
-  background-color: var(--brand-Card-icon-background-purple);
+  background-color: var(--brand-bgColor-purple);
 }
 
 .Card__icon--color-red {
-  color: var(--brand-Card-icon-color-red);
+  color: var(--brand-fgColor-red);
 }
 
 .Card__icon--color-red.Card__icon--badge {
-  background-color: var(--brand-Card-icon-background-red);
+  background-color: var(--brand-bgColor-red);
 }
 
 .Card__icon--color-teal {
-  color: var(--brand-Card-icon-color-teal);
+  color: var(--brand-fgColor-teal);
 }
 
 .Card__icon--color-teal.Card__icon--badge {
-  background-color: var(--brand-Card-icon-background-teal);
+  background-color: var(--brand-bgColor-teal);
 }
 
 .Card__icon--color-yellow {
-  color: var(--brand-Card-icon-color-yellow);
+  color: var(--brand-fgColor-yellow);
 }
 
 .Card__icon--color-yellow.Card__icon--badge {
-  background-color: var(--brand-Card-icon-background-yellow);
+  background-color: var(--brand-bgColor-yellow);
 }
 
 .Card--skew {
