Added previously missing site title to SubdomainNavBar component menu on narrow viewports

--- a/packages/react/src/SubdomainNavBar/SubdomainNavBar.module.css
+++ b/packages/react/src/SubdomainNavBar/SubdomainNavBar.module.css
@@ -256,6 +256,10 @@
   .SubdomainNavBar-link:first-of-type {
     padding-top: var(--base-size-24);
   }
+
+  .SubdomainNavBar-link--title {
+    font-weight: var(--base-text-weight-bold);
+  }
 }
 
 @media screen and (min-width: 48rem) {
